# ordipassio

./: .gitignore  Cargo.toml  Dioxus.toml  package.json
assets/: tailwind.css
src/: main.rs
src/components/: mod.rs
src/components/admin/: index.rs  login.rs  mod.rs
src/components/blog/: index.rs  mod.rs
src/components/contact/: index.rs  mod.rs
src/components/layout/: body.rs  footer.rs  header.rs  layout.rs  mod.rs
src/components/nosservices/: index.rs  mod.rs
