[package]
name = "blog"
version = "0.1.0"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }

dioxus = { version = "0.6.0-alpha.2", features = ["fullstack", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.1"
manganis = "0.3.0-alpha.2"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
